--- a/wp-content/plugins/indira-active/assets/scss/_blog.scss
+++ b/wp-content/plugins/indira-active/assets/scss/_blog.scss
@@ -5,24 +5,34 @@
  * @since 1.0.0
  */
 
-.content article {
+// date
+.content article,
+.single-post .content article {
+
     .custom-date {
         background: #f6f1e0; //$gray-dark;
         color: $gray-dark; //$white;
         font-style: normal;
+
+        .my-date-month {
+            padding-left: 4px;
+        }
     }
 }
 
+// "read more" link / button
 a.more-link, .more-from-category a {
     font-size: 14px;
     padding: 10px 44px;
 }
 
+// post footer
 .entry-footer {
     padding-bottom: 2px;
     background: $gray-lightest;
 }
 
+// "boxes"
 .content article, .sidebar .widget {
     box-shadow: 0 2px 15px rgba( $black, 0.01 );
 }
